Optimise relationship model